feat(plugin): add --enable-native-access=ALL-UNNAMED to default JVM args
Nucleus runtime modules load native libraries via JNI; without this flag
JDK 24+ (JEP 472) emits warnings and future JDKs will refuse access.
Applied to both the jpackage launcher and the run task via defaultJvmArgs.